Fixes issue where hamburger lines were off-center in Safari

--- a/web/app/themes/Stardust/assets/styles/_global.scss
+++ b/web/app/themes/Stardust/assets/styles/_global.scss
@@ -131,14 +131,11 @@ p {
 }
 
 .mobile-nav-touchable div {
-  position: absolute;
   width: 32px;
   height: 3px;
+  margin: 3px auto;
   background-color: $brand;
   transition: transform 175ms 175ms;
-
-  &:nth-child(1) { margin-top: -4px; }
-  &:nth-child(2) { margin-top: 4px; }
 }
 
 .menu-item {
